# rust-api

./: .env  Cargo.toml  README.md  Rocket.toml  diesel.toml
migrations/2025-05-27-062655_create_users/: up.sql
migrations/2025-05-27-071311_add_password_to_users/: up.sql
src/: main.rs  schema.rs
src/models/: user.rs
src/repositories/: user.rs
src/rocket_routes/: auth.rs  user.rs
src/utils/: hash.rs  jwt.rs
